--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 .contasto{
-padding: 180px 60px
+    padding: 180px 60px
 }
 .imageneportafolioooss{
     padding: 30;
 }
 .porot{
-background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(184, 0, 0, 1) 50%, rgba(0, 0, 0, 1) 100%);;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(184, 0, 0, 1) 50%, rgba(0, 0, 0, 1) 100%);;
 }
 .yoyoyo{
-    padding: 60px;
+ padding: 10px;
 }
+.somi{
+    display: flex;
+    padding: 20px;
+}
+
